--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,42 +1,40 @@
 version: '3.3'
 services:
-
   db:
-    env_file:
-      - ./.env
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    restart: always
+      - ../data:/test_data
+    env_file:
+      - .env
 
   backend:
     image: garmagelm/foodgram_backend:latest
     restart: always
     volumes:
-      - static_value:/code/backend_static/
-      - media_value:/code/backend_media/
+      - static_value:/code/static/
+      - media_value:/code/media/
     depends_on:
       - db
     env_file:
-      - ./.env
+      - .env
 
   frontend:
     image: garmagelm/foodgram_front:latest
     volumes:
-      - frontend_data:/app/build/
+      - frontend_value:/app/result_build/build
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.19.3
     ports:
       - 80:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      - frontend_data:/usr/share/nginx/html/
-      - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/code/backend_static/
-      - media_value:/code/backend_media/
-    restart: always
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - frontend_value:/usr/share/nginx/html/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - backend
       - frontend
@@ -45,4 +43,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
-  frontend_data:
+  frontend_value:
