--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,7 @@
-FROM python:3.8.5
+FROM python:3.8-slim
 WORKDIR /code
-COPY . .
+COPY requirements.txt /code
 RUN pip install --upgrade pip && pip install -r /code/requirements.txt
-ADD entrypoint.sh /entrypoint.sh
-RUN chmod a+x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
-CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+COPY . /code
+CMD python manage.py migrate
+CMD gunicorn foodgram_api.wsgi:application --bind 0.0.0.0:8000
