--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,8 @@ MarkupPy==1.14
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 odfpy==1.4.1
-openpyxl==3.0.9
+openpyxl==3.0.8
+Pillow==8.3.2
 psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
