--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,46 +1,42 @@
 version: '3.3'
 services:
+
   db:
     image: postgres:12.4
     volumes:
+      - media_value:/code/backend_media/
       - postgres_data:/var/lib/postgresql/data/
-      - ../data:/test_data
     env_file:
-      - .env
+      - ./.env
 
-  backend:
-    image: garmagelm/foodgram_backend:latest
+  web:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
     restart: always
     volumes:
-      - static_value:/code/static/
-      - media_value:/code/media/
+      - static_value:/code/backend_static/
+      - media_value:/code/backend_media/
     depends_on:
       - db
     env_file:
-      - .env
-
-  frontend:
-    image: garmagelm/foodgram_front:latest
-    volumes:
-      - frontend_value:/app/result_build/build
-    depends_on:
-      - backend
-
+      - ./.env
+  
   nginx:
     image: nginx:1.19.3
     ports:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - frontend_value:/usr/share/nginx/html/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/code/backend_static/
+      - media_value:/code/backend_media/
     depends_on:
-      - backend
-      - frontend
+      - web
 
 volumes:
   postgres_data:
   static_value:
   media_value:
-  frontend_value:
