--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,26 +1,41 @@
 server {
+    server_tokens off;
     listen 80;
-    location /backend_media/ {
-        autoindex on;
-        alias /code/backend_media/;
-    }
-    location /backend_static/ {
-        autoindex on;
-        alias /code/backend_static/;
-    }
+    server_name 127.0.0.1;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-    location /api/ {
+
+     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://web:8000;
     }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+
+    location /backend_static/admin/ {
+        autoindex on;
+        alias /code/backend_static/admin/;
+    }
+
+    location /backend_static/ {
+        autoindex on;
+        alias /code/backend_static/;
+    }
+
+    location /backend_media/ {
+        autoindex on;
+        alias /code/backend_media/;
+        expires -1;
+        add_header Cache-Control no-store;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -34,5 +49,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
