--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,53 @@
-anyio==3.1.0
-appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==20.1.0
-asgiref==3.2.7
-async-generator==1.10
-attrs==19.3.0
-Babel==2.9.1
-backcall==0.2.0
-bleach==3.3.0
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-cryptography==2.9.2
-decorator==4.4.2
+asgiref==3.4.1
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==3.4.8
 defusedxml==0.7.1
 diff-match-patch==20200713
-distlib==0.3.1
-Django==2.2.20
-django-cors-headers==3.7.0
-django-environ==0.7.0
+Django==3.2.7
+django-cors-headers==3.9.0
 django-filter==2.4.0
 django-import-export==2.6.0
-djangorestframework==3.11.0
-djangorestframework-simplejwt==4.6.0
-entrypoints==0.3
+django-templated-mail==1.1.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+drf-extra-fields==3.1.1
+drf-yasg==1.20.0
 et-xmlfile==1.1.0
-Faker==7.0.1
-filelock==3.0.12
-flake8==3.8.4
-flake8-broken-line==0.3.0
-flake8-isort==4.0.0
-flake8-plugin-utils==1.3.1
-flake8-polyfill==1.0.2
-flake8-return==1.1.2
-future==0.18.2
-idna==2.9
-importlib-metadata==1.6.0
-iniconfig==1.1.1
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-isort==5.7.0
-jedi==0.18.0
+gunicorn==20.1.0
+idna==3.2
+inflection==0.5.1
+itypes==1.2.0
 Jinja2==3.0.1
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyter-server==1.8.0
-jupyterlab==3.0.16
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.6.0
 MarkupPy==1.14
 MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-mistune==0.8.4
-mixer==7.1.2
-more-itertools==8.2.0
-nbclassic==0.3.1
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
+oauthlib==3.1.1
 odfpy==1.4.1
 openpyxl==3.0.9
-packaging==20.3
-pandocfilters==1.4.3
-parso==0.8.2
-pep8-naming==0.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.1
-pluggy==0.13.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.18
+packaging==21.0
+Pillow==8.3.2
 psycopg2-binary==2.9.1
-ptyprocess==0.7.0
-py==1.8.1
-pycodestyle==2.6.0
 pycparser==2.20
-pyflakes==2.2.0
-Pygments==2.9.0
 PyJWT==2.1.0
 pyparsing==2.4.7
-pyrsistent==0.17.3
-PySocks==1.7.1
-pytest==5.4.1
-pytest-django==3.9.0
-python-dateutil==2.8.1
-python-dotenv==0.13.0
-python-telegram-bot==12.7
+python-dotenv==0.19.0
+python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
-pyzmq==22.1.0
-requests==2.23.0
-Send2Trash==1.5.0
-six==1.14.0
-sniffio==1.2.0
-sorl-thumbnail==12.6.3
-sqlparse==0.4.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
+sqlparse==0.4.2
 tablib==3.0.0
-terminado==0.10.1
-testfixtures==6.17.1
-testpath==0.5.0
-text-unidecode==1.3
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.25.9
-virtualenv==20.4.2
-wcwidth==0.1.9
-webencodings==0.5.1
-websocket-client==1.1.0
+uritemplate==3.0.1
+urllib3==1.26.7
 xlrd==2.0.1
 xlwt==1.3.0
-zipp==3.1.0
