--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,36 +1,26 @@
 server {
     listen 80;
-
-    server_name 62.84.117.104;
-
-    server_tokens off;
-
-    location /media/ {
+    location /backend_media/ {
         autoindex on;
-        root /var/html/;
+        alias /code/backend_media/;
     }
-
-    location /static/admin/ {
+    location /backend_static/ {
         autoindex on;
-        alias /var/html/static/admin/;
+        alias /code/backend_static/;
     }
-
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
     }
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
