--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+
+    server_tokens off;
+    
     location /backend_media/ {
         autoindex on;
         alias /code/backend_media/;
