--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-
     server_tokens off;
+    server_name 130.193.37.127;
     
     location /backend_media/ {
         autoindex on;
@@ -37,4 +37,5 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
 }
