--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,48 +1,48 @@
-version: '3.3'
-services:
+version: '3.7'
 
+services:
   db:
-    env_file:
-      - ./.env
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
     restart: always
 
   backend:
     image: garmagelm/foodgram_backend:latest
     restart: always
-    volumes:
-      - static_value:/code/backend_static/
-      - media_value:/code/backend_media/
     depends_on:
       - db
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
     env_file:
-      - ./.env
+    - ./.env
 
   frontend:
     image: garmagelm/foodgram_front:latest
     volumes:
-      - frontend_data:/app/build/
+      - ./frontend/:/app/result_build/
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.19.3
     ports:
       - 80:80
     volumes:
+      - static_value:/static/
+      - media_value:/media/
       - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      - frontend_data:/usr/share/nginx/html/
+      - ./frontend/build:/usr/share/nginx/html/
       - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/code/backend_static/
-      - media_value:/code/backend_media/
     restart: always
     depends_on:
-      - backend
       - frontend
 
 volumes:
   postgres_data:
   static_value:
   media_value:
-  frontend_data:
