--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -23,21 +23,22 @@ services:
   frontend:
     image: garmagelm/foodgram_front:latest
     volumes:
-      - ./frontend/:/app/result_build/
+      - ../frontend/:/app/result_build/
     depends_on:
-      - backend
+      - db
 
   nginx:
     image: nginx:1.19.3
     ports:
       - 80:80
     volumes:
-      - static_value:/static/
-      - media_value:/media/
-      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs:/usr/share/nginx/html/api/docs
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
     restart: always
     depends_on:
       - frontend
