--- a/.github/workflows/foodgram_project.yml
+++ b/.github/workflows/foodgram_project.yml
@@ -67,18 +67,18 @@ jobs:
             sudo docker pull garmagelm/foodgram_backend:latest
             sudo docker-compose stop
             sudo docker-compose rm backend
+            sudo docker system prune -f --volumes
             # Создаст файл для переменных окружения
             touch .env
             # Наполнит файл переменными окружения из секретов GitHub
             echo HOSTS=${{ secrets.HOSTS }} >> .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d
+            sudo docker-compose up -d --build
   send_message:
       runs-on: ubuntu-latest
       needs: deploy
