--- a/.github/workflows/foodgram_project.yml
+++ b/.github/workflows/foodgram_project.yml
@@ -69,6 +69,7 @@ jobs:
             sudo docker-compose rm backend
             sudo docker system prune -f --volumes
             # Создаст файл для переменных окружения
+            rm .env -rf
             touch .env
             # Наполнит файл переменными окружения из секретов GitHub
             echo HOSTS=${{ secrets.HOSTS }} >> .env
