--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.8.5
 WORKDIR /code
+COPY requirements.txt requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 COPY . .
-RUN pip install -U pip && pip install -r requirements.txt
 CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
