--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ anyio==3.1.0
 appdirs==1.4.4
 appnope==0.1.2
 argon2-cffi==20.1.0
-asgiref==3.2.7
+asgiref==3.4.1
 async-generator==1.10
 attrs==19.3.0
 Babel==2.9.1
@@ -11,6 +11,8 @@ bleach==3.3.0
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==2.9.2
 decorator==4.4.2
 defusedxml==0.7.1
@@ -22,8 +24,10 @@ django-cors-headers==3.7.0
 django-environ==0.7.0
 django-filter==2.4.0
 django-import-export==2.6.0
+django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.6.0
+djoser==2.1.0
 entrypoints==0.3
 et-xmlfile==1.1.0
 Faker==7.0.1
@@ -43,6 +47,7 @@ ipykernel==5.5.5
 ipython==7.24.1
 ipython-genutils==0.2.0
 isort==5.7.0
+itypes==1.2.0
 jedi==0.18.0
 Jinja2==3.0.1
 json5==0.9.5
@@ -66,6 +71,7 @@ nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.0
+oauthlib==3.1.1
 odfpy==1.4.1
 openpyxl==3.0.9
 packaging==20.3
@@ -94,13 +100,17 @@ pytest-django==3.9.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-telegram-bot==12.7
+python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
 pyzmq==22.1.0
 requests==2.23.0
+requests-oauthlib==1.3.0
 Send2Trash==1.5.0
 six==1.14.0
 sniffio==1.2.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sorl-thumbnail==12.6.3
 sqlparse==0.4.1
 tablib==3.0.0
@@ -111,6 +121,7 @@ text-unidecode==1.3
 toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
+uritemplate==3.0.1
 urllib3==1.25.9
 virtualenv==20.4.2
 wcwidth==0.1.9
