--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 Django==3.2.7
 django-cors-headers==3.9.0
+django-environ==0.7.0
 django-extra-fields==3.0.2
 django-filter==2.4.0
 django-import-export==2.6.0
