--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3.7'
+version: '3.8'
 
 services:
   db:
     image: postgres:12.4
+    container_name: postgresql
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    restart: always
     env_file:
       - ./.env
-    restart: always
 
   backend:
     image: garmagelm/foodgram_backend:latest
@@ -15,10 +16,10 @@ services:
     depends_on:
       - db
     volumes:
-      - static_value:/code/static/
-      - media_value:/code/media/
+      - static_value:/code/backend_static/
+      - media_value:/code/backend_media/
     env_file:
-    - ./.env
+      - ./.env
 
   frontend:
     image: garmagelm/foodgram_front:latest
@@ -32,16 +33,16 @@ services:
     ports:
       - 80:80
     volumes:
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/backend_static/
+      - media_value:/backend_media/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs:/usr/share/nginx/html/api/docs
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
     restart: always
     depends_on:
-      - frontend
+      - backend
 
 volumes:
   postgres_data:
